# X4Launcher

./: CMakeLists.txt  CMakePresets.json  README.md  distribute.sh
build_windows/: CPackConfig.cmake  CPackSourceConfig.cmake
build_windows/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cmake/: CompilerFlags.cmake  mingw-w64.cmake
deploy/: x4launcher.desktop
packaging/: README-packaging.md  build_release.sh  build_windows_native.ps1  check_ldd.sh  collect_deps.sh  collect_deps_win.sh  convert_icon.sh  fix_rpath.sh  menu.sh  package_linux.sh  package_windows.sh  package_zip.sh  strip_binaries.sh  test_env.sh
resources/: resources.qrc  x4launcher.rc
src/: main.cpp
src/auth/: AccountManager.cpp  AccountManager.h  AuthAccount.h  AuthController.cpp  AuthController.h  CMakeLists.txt  LinuxTokenStore.cpp  LinuxTokenStore.h  LoopbackServer.cpp  LoopbackServer.h  MicrosoftOAuthClient.cpp  MicrosoftOAuthClient.h  MinecraftAuthClient.cpp  MinecraftAuthClient.h  OAuthSession.cpp  OAuthSession.h  PkceGenerator.cpp  PkceGenerator.h  TokenStore.cpp  TokenStore.h  WindowsTokenStore.cpp  WindowsTokenStore.h  XSTSClient.cpp  XSTSClient.h  XboxLiveClient.cpp  XboxLiveClient.h
src/cache/: AssetCache.cpp  AssetCache.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  LibraryCache.cpp  LibraryCache.h
src/core/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  GlobalEvents.cpp  GlobalEvents.h  Logger.cpp  Logger.h  PathManager.cpp  PathManager.h  SettingsManager.cpp  SettingsManager.h  Translator.cpp  Translator.h  Types.h
src/instance/: CMakeLists.txt  Instance.h  InstanceConfig.cpp  InstanceConfig.h  InstanceImporter.cpp  InstanceImporter.h  InstanceManager.cpp  InstanceManager.h  ModLoader.cpp  ModLoader.h
src/java/: CMakeLists.txt  JavaDetector.cpp  JavaDetector.h  JavaManager.cpp  JavaManager.h  JavaProvisioner.cpp  JavaProvisioner.h  JavaVersion.h
src/launch/: ArgumentResolver.cpp  ArgumentResolver.h  CMakeLists.txt  LaunchEngine.cpp  LaunchEngine.h  MetaAPI.cpp  MetaAPI.h  VersionManifest.cpp  VersionManifest.h  VersionParser.cpp  VersionParser.h
src/modrinth/: CMakeLists.txt  ModrinthAPI.cpp  ModrinthAPI.h
src/network/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  HttpClient.cpp  HttpClient.h
src/ui/: AuthDialog.cpp  AuthDialog.h  CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h  CrashReportDialog.cpp  CrashReportDialog.h  CreateInstanceDialog.cpp  CreateInstanceDialog.h  InstanceDelegate.cpp  InstanceDelegate.h  InstanceEditorDialog.cpp  InstanceEditorDialog.h  InstanceListWidget.cpp  InstanceListWidget.h  JavaInstallerDialog.cpp  JavaInstallerDialog.h  KeyBindManager.cpp  KeyBindManager.h  MainWindow.cpp  MainWindow.h  ModrinthBrowserDialog.cpp  ModrinthBrowserDialog.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h
